movie and sessions delete added